--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,9 +10,9 @@
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --primary: 70%, 0%, 67%, 27%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
+    --secondary: 63%, 28%, 0%, 83%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
@@ -67,6 +67,20 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* scroll */
+  ::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--border));
+    border-radius: 0.25rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: hsl(var(--background));
   }
 }
 
